--- a/css/sass/_templates.scss
+++ b/css/sass/_templates.scss
@@ -123,6 +123,7 @@
         margin: 16px 8px;
       }
       .entry-content {
+        width: auto;
         padding: 0;
         margin: 0 8px;
       }
